--- a/6월 3주차/6월 16일.MD
+++ b/6월 3주차/6월 16일.MD
@@ -23,3 +23,145 @@
 ## 학습목표
 - 의존성 주입의 List, set Map형태의 의존성 주입 방법
 - Annotation 처리
+
+
+
+### String Set Map Properties 출력
+- CollectionBeanClient
+```java
+package com.mycompany.biz.injection;
+
+import java.util.Iterator;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Properties;
+
+import org.springframework.context.support.AbstractApplicationContext;
+import org.springframework.context.support.GenericXmlApplicationContext;
+
+public class CollectionBeanClient {
+	
+	public static void main(String[] args) {
+		
+		AbstractApplicationContext factory = new GenericXmlApplicationContext("applicationContext.xml");
+		
+		CollectionBean bean = (CollectionBean)factory.getBean("collectionBean");
+		
+		// 활용
+		for(String address : bean.getAddress()) {
+			System.out.println(address);
+		}
+		
+		System.out.println("------------------------");
+		
+		CollectionBean2 bean2 = (CollectionBean2)factory.getBean("collectionSetBean");
+		// iterator() 출력
+		
+		LinkedHashSet<String> set = (LinkedHashSet<String>) bean2.getAddress();
+
+		Iterator<String> itr = set.iterator();
+
+		while (itr.hasNext()) {
+		    System.out.println(itr.next());
+		}
+				
+		
+		System.out.println("------------------------");
+		
+		CollectionBean3 bean3 = (CollectionBean3)factory.getBean("collectionMapBean");
+		// 키 >> 값
+		
+		LinkedHashMap<String, String> map = (LinkedHashMap<String, String>) bean3.getAddress();
+		
+		for(Map.Entry<String, String> entry : map.entrySet()) {
+			String key = entry.getKey();
+			String value = entry.getValue();
+			
+			System.out.println(key + " : " + value);
+
+
+			
+		}
+		
+		System.out.println("------------------------");
+		
+		CollectionBean4 bean4 = (CollectionBean4)factory.getBean("collectionPropertiesBean");
+		
+		Properties properties = bean4.getAddress();
+
+		for (String key : properties.stringPropertyNames()) {
+		    String value = properties.getProperty(key);
+		    System.out.println(key + " : " + value);
+		}
+		
+		factory.close();
+	}
+	
+
+}
+
+```
+
+- applicationContext
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd">
+	
+	<!-- 아이디는 생략 가능함 -->
+	<bean id="collectionBean" class="com.mycompany.biz.injection.CollectionBean">
+		<property name="address">
+			<list>
+				<value>서울시 마포구 이대앞</value>
+				<value>서울시 영등포구</value>
+				<value>서울시 성동구 행신동</value>
+			</list>
+		</property>
+	</bean>
+	
+	<bean id="collectionSetBean" class="com.mycompany.biz.injection.CollectionBean2">
+		<property name="address">
+			<set>
+				<value>서울시 강남구 논현동</value>
+				<value>서울시 성동구 성수동</value>
+				<value>서울시 광진구 자양동</value>
+			</set>
+		</property>
+	</bean>
+	
+	<bean id="collectionMapBean" class="com.mycompany.biz.injection.CollectionBean3">
+		<property name="address">
+			<map>
+				<entry>
+					<key><value>홍길동</value></key>
+					<value>서울시 강남구 삼성동</value>
+				</entry>
+				
+				<entry>
+					<key><value>강감찬</value></key>
+					<value>서울시 영등포구 여의도동</value>
+				</entry>
+				
+				<entry>
+					<key><value>을지문덕</value></key>
+					<value>경기 수원시 팔달구</value>
+				</entry>
+			</map>
+		</property>
+	</bean>
+	
+	<bean id="collectionPropertiesBean" class="com.mycompany.biz.injection.CollectionBean4">
+		<property name="address">
+			<props>
+				<prop key="김길동">서울시 영등포구 목동</prop>
+				<prop key="이은희">서울시 강서구 화곡동</prop>
+			</props>
+		</property>
+	</bean>
+	
+</beans>
+
+```
