--- a/6월 3주차/6월 16일.MD
+++ b/6월 3주차/6월 16일.MD
@@ -165,3 +165,54 @@ public class CollectionBeanClient {
 </beans>
 
 ```
+
+
+
+### 기본생성자를 만들어주지 않으면 실행이 안된다
+```
+package com.mycompany.biz.injection;
+
+import javax.annotation.Resource;
+
+import org.springframework.stereotype.Component;
+
+@Component("lgTV")
+public class LGTV implements TV{
+	
+	@Resource(name = "sony")
+	private Speaker speaker;
+
+	
+	public  LGTV() {}
+	
+	
+	public LGTV(Speaker speaker) {
+		this.speaker = speaker;
+
+	}
+	
+	public void setSpeaker(Speaker speaker) {
+		this.speaker = speaker;
+	}
+	
+	
+	@Override
+	public void powerOn() {
+		System.out.println("엘지TV를 켠다");
+
+	}
+	@Override
+	public void powerOff() {
+		System.out.println("엘지TV를 끈다");
+	}
+	@Override
+	public void volumeUp() {
+		speaker.volumeUp();
+	}
+	@Override
+	public void volumeDown() {
+		speaker.volumeDown();
+	}
+}
+
+```
