--- a/6월 3주차/6월 16일.MD
+++ b/6월 3주차/6월 16일.MD
@@ -24,6 +24,18 @@
 - 의존성 주입의 List, set Map형태의 의존성 주입 방법
 - Annotation 처리
 
+### 이론
+```
+	Spring Annotation
+		. @AutoWired
+		. @Qualifier
+		. @Injection
+		. @Resource
+		
+		. @Service		: 비즈니스 로직처리한 서비스클래스
+		. @Respository	: 데이터베이스 연동 DAO
+		. @Controller	: 사용자 요청을 제어하는 컨트롤러
+```
 
 
 ### String Set Map Properties 출력
