--- a/6월 4주차/6월 19일.MD
+++ b/6월 4주차/6월 19일.MD
@@ -1,21 +1,18 @@
 # Review
 
-### 기존자바
-- 사용자가 직접
+### 의존성관리
+- 스프링 프레임 워크의 가장 중요한 특징은 .객체의 생성 .의존관계를 컨테이너가 자동으로 관리한다는 점
 
-### 제어의 역전
-- 특별한 관리 위임 주체(Spring Container)가 처리
+- 스프링 IoC 두가지 형태 . Dependency Lookup, Dependency Injection
 
+### IOC 방식
 ```
-스프링에게 제어를 위임하여 스프링이 실행될 떄 객체를 생성하고 > 객체를 주입 > 의존성 객체의 메서드 호출 구조이다.
+Dependency Lookup - 거의 사용 안함
+
+Dependency Injection
+- Setter, Constructor Injection
+. 스프링 설정파일에 등록된 정보를 바탕으로 컨테이너가 자동으로 의존주입 처리
 ```
-
-### 의존성 주입(DI)
-- 객체를 외부(Spring)에서 생성해서 사용하려는 주체 객체(A)에 주입시켜주는 방식
-- 결합도와 의존성을 낮춰서 개발자의 업무표준화 및 효율적인 유지보수를 지향
-
-### applicationContext.xml
-- beans, bean, id, class/value, constructor-arg, index, ref, value, property, name, ref, value
 
 
 -----------------------------------------------------
