--- a/6월 4주차/6월 19일.MD
+++ b/6월 4주차/6월 19일.MD
@@ -14,6 +14,11 @@ Dependency Injection
 . 스프링 설정파일에 등록된 정보를 바탕으로 컨테이너가 자동으로 의존주입 처리
 ```
 
+### MVC에서 어노테이션
+- @ Component
+- @ Controller : 사용자 요청제어, 해당 객체를 MVC의 컨트롤러로 인식하게 해준다.
+- @ Service : 비즈니스 로직처리
+- @ Repository : 데이터베이스 연동, DB연동시 발생하는 예외를 변환해주는 특별한 기능도 포함되어 있다.
 
 -----------------------------------------------------
 
