--- a/6월 4주차/6월 19일.MD
+++ b/6월 4주차/6월 19일.MD
@@ -23,5 +23,7 @@ Dependency Injection
 -----------------------------------------------------
 
 ## 학습목표
-- 의존성 주입의 List, set Map형태의 의존성 주입 방법
-- Annotation 처리
+- 게시판관리 서비스 (BoardService)생성에 추가해서 회원관리 서비스(UserService) 추가구현
+- AOP의 기본학습 구현, 
+- IoC : 결합도 
+- AOP(Aspect Oriented Programming) : 응집도
