--- a/6월 4주차/6월 19일.MD
+++ b/6월 4주차/6월 19일.MD
@@ -24,6 +24,6 @@ Dependency Injection
 
 ## 학습목표
 - 게시판관리 서비스 (BoardService)생성에 추가해서 회원관리 서비스(UserService) 추가구현
-- AOP의 기본학습 구현, 
+- AOP의 기본학습 구현
 - IoC : 결합도 
 - AOP(Aspect Oriented Programming) : 응집도
