--- a/6월 4주차/6월 19일.MD
+++ b/6월 4주차/6월 19일.MD
@@ -27,3 +27,7 @@ Dependency Injection
 - AOP의 기본학습 구현
 - IoC : 결합도 
 - AOP(Aspect Oriented Programming) : 응집도
+
+
+#### alt + shift + s - VO쪽 toString 쉽게 만들기
+
