--- a/6월 4주차/6월 19일.MD
+++ b/6월 4주차/6월 19일.MD
@@ -31,3 +31,60 @@ Dependency Injection
 
 #### alt + shift + s - VO쪽 toString 쉽게 만들기
 
+### 이론
+```
+ 
+	AOP용어 및 기본설정
+		1. 조인트 포인트(Jointpoint)
+			- 클라이언트가 호추하는 모든 비즈니스 메서드
+			- 포인트컷의 후보가 된다.
+			
+		2. 포인트컷(pointcut)
+			- 조인트 포인트 중에서 필터링된 메서드
+			- 우리가 원하는 특정 메서드에서만 횡단 관심에 해당하는 공통기능을
+				수행하기 위해 포인트컷으로 필터한다.
+				
+			- expression
+				* | com.mycompany.biz.. |*impl| *(..)
+				* | com.mycompany.biz.. |*impl|get*(..)
+				1)			2)			3)		4)
+				
+			1) 리턴타입	
+				*		모든 리턴타입 적용
+				void	리턴타입이 void인 메서드
+				!void	리터타입이 void가 아닌 메서드
+				
+			2) 패키지 경로
+				com.mycompany.biz	해당하는 패키지만 선택
+				com.mycompany.biz..	biz패키지로 시작하는 모든 패키지
+				com.mycompany..impl	com.mycompany로 시작하면서,, 마지막 패키지 이름이 impl로 끝나는 패키지
+					
+			3) 클래스명
+				BoardServiceimpl	해당 클래스
+				* impl				클래스 이름이 impl로 끝나는 모든 클래스만 선택
+				BoardService + 		해당 클래스에서 파생된 모든 자식클래스 선택 (인터페이스 동일)
+				
+			4) 메서드명
+				*(..)				모든 메서드 선택
+				get(..)				메서드 이름이 get으로 시작하는 모든 메서드 선택
+				
+			5) 매개변수
+				(..)				기본설정, 매개변수의 개수 타입의 제약이 없다.
+				(*)					반드시 1개 이상의 매개변수를 갖고 있는 메서드만 선택
+				(com.mycompany.user.UserVO)	UserVO를 가지고 있는 메서드만 선택(패키지명까지 필수 기입)
+				(!com.mycompany.user.UserVO) "		가지지 않는 메서드만 선택
+				(Integer...)		한 개 이상의 매개변수이고 첫번째 매개변수가 Integer타입의 메서드만 선택
+				(Integer,*)			반드시 두 개 이상의 매개변수이고, 시작은 Integer타입인 메서드만 선택
+				
+		3. 어드바이스(Advice)
+			- 횡단관심에 해당하는 공통기능의 코드를 의미
+			- 수행시점
+				. before
+				. after
+					- after returning 	: 비즈니스 메서드가 성공적으로 실행되고나서 그 결과로 생성된 데이터가 리턴되면 동작
+					- after throwing 	: 비즈니스 메서드가 실행중 예외가 발생되면 동작 (try~catch에서 catch 해당)
+					- after				: 비즈니스 메서드 실행후 무조건 실행 (finally에 해당)
+					
+				. around
+
+```
