--- a/6월 4주차/6월 20일.MD
+++ b/6월 4주차/6월 20일.MD
@@ -1,24 +1,8 @@
 # Review
 
-### 의존성관리
-- 스프링 프레임 워크의 가장 중요한 특징은 .객체의 생성 .의존관계를 컨테이너가 자동으로 관리한다는 점
-
-- 스프링 IoC 두가지 형태 . Dependency Lookup, Dependency Injection
-
-### IOC 방식
-```
-Dependency Lookup - 거의 사용 안함
-
-Dependency Injection
-- Setter, Constructor Injection
-. 스프링 설정파일에 등록된 정보를 바탕으로 컨테이너가 자동으로 의존주입 처리
-```
-
-### MVC에서 어노테이션
-- @ Component
-- @ Controller : 사용자 요청제어, 해당 객체를 MVC의 컨트롤러로 인식하게 해준다.
-- @ Service : 비즈니스 로직처리
-- @ Repository : 데이터베이스 연동, DB연동시 발생하는 예외를 변환해주는 특별한 기능도 포함되어 있다.
+### 관점지향프로그램(AOP)
+- 횡단관심 + 핵심관심으로 구성된 프로그램에서
+- 메서드마다
 
 -----------------------------------------------------
 
