--- a/6월 4주차/6월 20일.MD
+++ b/6월 4주차/6월 20일.MD
@@ -23,7 +23,6 @@
 -----------------------------------------------------
 
 ## 학습목표
-- 게시판관리 서비스 (BoardService)생성에 추가해서 회원관리 서비스(UserService) 추가구현
-- AOP의 기본학습 구현
-- IoC : 결합도 
-- AOP(Aspect Oriented Programming) : 응집도
+- AOP의 동작시점 review
+- AOP의 JointPoint 인터페이스
+- AOP를 Annotation으로 구현할 수 있다.
