--- a/6월 4주차/6월 20일.MD
+++ b/6월 4주차/6월 20일.MD
@@ -65,7 +65,11 @@
 	사용자 ----- > 메서드호출 ----- > proceed()
 											| after
 
-
+	/* 
+		@Before("~~()")
+		@AfterReturning(),@Afterthrowing(""), @After()
+		@Around() - 호출자체를 가로채서 비즈니스 메서드 실행 전후에 처리할 로직을 삽입한다.
+	 */
 
 ```
 
