--- a/6월 4주차/6월 20일.MD
+++ b/6월 4주차/6월 20일.MD
@@ -73,4 +73,100 @@
 
 ```
 
+### AOP aspect처리
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns:context="http://www.springframework.org/schema/context"
+	xmlns:p="http://www.springframework.org/schema/p"
+	xmlns:aop="http://www.springframework.org/schema/aop"
+	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
+		http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-4.3.xsd
+		http://www.springframework.org/schema/aop http://www.springframework.org/schema/aop/spring-aop-4.3.xsd">
+
+ <context:component-scan base-package="com.mycompany.biz"/>
+ 
+ <!-- 스프링컨테이너는 AOP관련 어노테이션을 찾아 인식하고 용도에 맞게 처리하게 된다. -->
+ <aop:aspectj-autoproxy></aop:aspectj-autoproxy>
+ 
+</beans>
+```
+```java
+package com.mycompany.biz.common;
+
+import org.aspectj.lang.JoinPoint;
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.Before;
+import org.aspectj.lang.annotation.Pointcut;
+import org.springframework.stereotype.Service;
+
+@Service
+@Aspect
+public class BeforeAdvice {
+	
+	// 포인트컷
+	@Pointcut("execution(* com.mycompany.biz..*impl.*(..))")
+	public void allPointCut() {}
+	
+	@Pointcut("execution(* com.mycompany.biz..*impl.get*(..))")
+	public void getPointCut() {}
+		
+	
+	@Before("allPointCut()")
+	public void beforeLog(JoinPoint jp) {
+		
+		String method = jp.getSignature().getName();
+		Object[] args = jp.getArgs();
+		
+		System.out.println("[사전처리]" + method+"()메서드와 args정보 : " + args[0].toString());
+		
+	}
+	
+}
+
+```
+
+#### 실행
+```java
+package com.mycompany.biz.user;
+
+import java.util.ArrayList;
+
+import org.springframework.context.support.AbstractApplicationContext;
+import org.springframework.context.support.GenericXmlApplicationContext;
+
+import com.mycompany.biz.board.BoardVO;
+import com.mycompany.biz.board.impl.BoardService;
+import com.mycompany.biz.user.impl.UserService;
+
+public class UserServiceClient {
+
+	public static void main(String[] args) {
+		
+		AbstractApplicationContext container = new GenericXmlApplicationContext("applicationContext.xml");
+		UserService userService = (UserService)container.getBean("userService");
+		
+		UserVO vo = new UserVO();
+		vo.setId("admin");
+		vo.setPassword("1234");
+		
+		UserVO user = (UserVO)userService.getUser(vo);
+		
+		BoardService boardService = (BoardService)container.getBean("boardService");
+		
+		if(user != null) {
+			System.out.println(user.getName()+"님 환영합니다.");
+		} else {
+			System.out.println("로그인 실패");
+		}
+			
+		
+		container.close();
+		
+	}
+	
+}
+
+```
 
