--- a/6월 4주차/6월 20일.MD
+++ b/6월 4주차/6월 20일.MD
@@ -170,3 +170,43 @@ public class UserServiceClient {
 
 ```
 
+
+
+
+
+### service aspect처리
+- xml에는 autoproxy만
+```java
+package com.mycompany.biz.common;
+
+import org.aspectj.lang.JoinPoint;
+import org.aspectj.lang.annotation.AfterReturning;
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.Pointcut;
+import org.springframework.stereotype.Service;
+
+import com.mycompany.biz.user.UserVO;
+
+@Service // 해당 클래스 빈으로 됭록되어야 함을 나타냄
+@Aspect // 해당 클래스가 AOP관련 기능을 가지고 있다는 것을 나타냄
+public class AfterReturningAdvice {
+	
+	@Pointcut("execution(* com.mycompany.biz..*impl.get*(..))") // 이 annotation은 포인트컷을 정의하는 역할 getPointcut()에 매칭되는것을 찾음
+	public void getPointcut() {}
+	
+	@AfterReturning(pointcut = "getPointcut()", returning = "returnobj") // 실제 처리될 사후처리 로직을 구현
+	public void afterLog(JoinPoint jp, Object returnobj) {
+		String method = jp.getSignature().getName();
+		
+		if(returnobj instanceof UserVO) {
+			UserVO user = (UserVO)returnobj;
+			
+			if(user.getRole().equals("홍길동역할")) {
+				System.out.println(user.getName()+"로그인(Admin)");
+			}
+		}
+		System.out.println("[사후처리]"+method+"()메서드 리턴값 : "+ returnobj.toString());
+	}
+}
+
+```
