--- a/6월 4주차/6월 21일.MD
+++ b/6월 4주차/6월 21일.MD
@@ -12,7 +12,6 @@
 -----------------------------------------------------
 
 ## 학습목표
-- AOP의 동작시점 review
-- AOP의 JointPoint 인터페이스
-- AOP를 Annotation으로 구현할 수 있다.
-♍
+- Spring에서 Database 연동구현 >> JdbcTemplate
+- Spring에서 Transaction 구현
+
