--- a/6월 4주차/6월 21일.MD
+++ b/6월 4주차/6월 21일.MD
@@ -15,3 +15,26 @@
 - Spring에서 Database 연동구현 >> JdbcTemplate
 - Spring에서 Transaction 구현
 
+### 이론
+```
+	JDBCTemplate
+	
+		- insert
+			int update(query, Object...args){}
+		- update
+			int update(query, Object...args){}
+		- Delete
+			int update(query, Object...args){}
+			
+		- 특정객체검색
+			Object queryForObject(query, args, RowMapper<object> rowMapper)
+		- 전체객체검색
+			List query(query, RowMapper<object> rowMapper)
+		- 존재개수검색
+			int queryForInt(query, Object...args){}
+			
+	RowMapper<object>
+		- Object mapRow(ResultSet rs, int rowNum) {
+			// 객체에다 row수만큼 반복하ㅕㄴ서 rs의 값으로 매핑해준다.
+		}	
+```
