--- a/6월 4주차/6월 21일.MD
+++ b/6월 4주차/6월 21일.MD
@@ -38,3 +38,25 @@
 			// 객체에다 row수만큼 반복하ㅕㄴ서 rs의 값으로 매핑해준다.
 		}	
 ```
+
+### RowMapper
+```java
+	// 특정객체검색
+	public BoardVO getBoard(BoardVO vo) {
+		return jdbcTemplate.queryForObject(BOARD_GET, vo.getSeq(), new BoardRowMapper());
+	}
+	
+	
+	// queryForObject의 반환형은 데이터형만 가능하다
+	// 하지만 select * from user 같이  USER 객체 자체를 반환하는건 포기해야 하나?
+	// 그걸 위해서 필요한것이 바로 RowMapper
+	class BoardRowMapper implements RowMapper<BoardVO>{
+
+		@Override
+		public BoardVO mapRow(ResultSet rs, int rowNum) throws SQLException {
+			// TODO Auto-generated method stub
+			return null;
+		}
+		
+	
+```
