--- a/6월 4주차/6월 21일.MD
+++ b/6월 4주차/6월 21일.MD
@@ -39,6 +39,87 @@
 		}	
 ```
 
+### BoardDAOSpring
+- 알아서 스프링이 해준다..
+- getBoard, getBoardList에서 스프링이 알아서 처리해줌
+- https://withseungryu.tistory.com/92
+```java
+package com.mycompany.biz.board.impl;
+
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.stereotype.Repository;
+
+import com.mycompany.biz.board.BoardVO;
+
+/*
+	JDBCTemplate
+	
+		- insert
+			int update(query, Object...args){}
+		- update
+			int update(query, Object...args){}
+		- Delete
+			int update(query, Object...args){}
+			
+		- 특정객체검색
+			Object queryForObject(query, args, RowMapper<object> rowMapper)
+		- 전체객체검색
+			List query(query, RowMapper<object> rowMapper)
+		- 존재개수검색
+			int queryForInt(query, Object...args){}
+			
+	RowMapper<object>
+		- Object mapRow(ResultSet rs, int rowNum) {
+			// 객체에다 row수만큼 반복하면서 rs의 값으로 매핑해준다.
+		}			
+*/
+
+@Repository()
+public class BoardDAOSpring {
+	
+	@Autowired
+	private JdbcTemplate jdbcTemplate;
+	
+	private final String BOARD_INSERT = "INSERT INTO board (seq, title, writer, content) VALUES ((SELECT seq from(select ifnull(MAX(seq), 0) + 1 AS seq FROM board) tmp), ?, ?, ?)";
+	
+	private final String BOARD_UPDATE 
+		= "update board set title=?,content=? where seq=?";
+	private final String BOARD_DELETE 
+		= "delete board where seq=?";
+	private final String BOARD_GET 
+		= "select * from board where seq=?";
+	private final String BOARD_LIST 
+		= "select * from board order by seq desc";
+	
+	// 등록
+	public void insertBoard(BoardVO vo) {
+		jdbcTemplate.update(BOARD_INSERT,vo.getTitle(),vo.getWriter(),vo.getContent());
+	}
+	// 수정
+	public void updateBoard(BoardVO vo) {
+		jdbcTemplate.update(BOARD_UPDATE,vo.getTitle(),vo.getWriter(),vo.getSeq());
+	}
+	
+	public void deleteBoard(BoardVO vo) {
+		jdbcTemplate.update(BOARD_DELETE,vo.getSeq());
+	}
+	
+	// 특정객체검색
+	public BoardVO getBoard(BoardVO vo) {
+		Object[] args = {vo.getSeq()};
+		return jdbcTemplate.queryForObject(BOARD_GET, args, new BoardRowMapper());
+	}
+	
+	// 전체조회
+	public List<BoardVO> getBoardList(BoardVO vo){
+		return jdbcTemplate.query(BOARD_LIST, new BoardRowMapper());	
+	}	
+}
+```
+
 ### RowMapper
 ```java
 	// 특정객체검색
