--- a/6월 4주차/6월 22일.MD
+++ b/6월 4주차/6월 22일.MD
@@ -6,4 +6,295 @@
 -----------------------------------------------------
 
 ## 학습목표
-- Dispatcher 구
+- Dispatcher로 처리해서 만들기
+- web.xeml 설정해서 localhost:8080에서 바로 메인 뜨게 만들기 ( tomcat에서 / 처리)
+
+### web xml
+```xml
+	<welcome-file-list>
+		<welcome-file>/WEB-INF/views/login_main.jsp</welcome-file>
+	</welcome-file-list>
+```
+
+### Dispatcher 코드
+```java
+package com.mycompany.view.controller;
+
+import java.io.IOException;
+import java.util.List;
+
+import javax.servlet.ServletException;
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpSession;
+
+import com.mycompany.biz.board.BoardVO;
+import com.mycompany.biz.board.impl.BoardDAO;
+import com.mycompany.biz.user.UserVO;
+import com.mycompany.biz.user.impl.UserDAO;
+
+@WebServlet("*.do")
+public class DispatcherServlet extends HttpServlet {
+	private static final long serialVersionUID = 1L;
+       
+    public DispatcherServlet() {
+        super();
+    }
+
+	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+		
+		process(request, response);
+		
+		
+	}
+
+
+	protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+		
+		process(request, response);
+		
+		request.setCharacterEncoding("utf-8");
+	}
+	
+	private void process(HttpServletRequest request, HttpServletResponse response) throws ServletException,IOException{
+		
+		String uri = request.getRequestURI();
+		String path = uri.substring(uri.lastIndexOf("/"));
+		
+		if(path.equals("/login.do")) {
+			
+			
+			String id = request.getParameter("id");
+			String password = request.getParameter("password");
+			
+			UserVO vo = new UserVO();
+			vo.setId(id);
+			vo.setPassword(password);
+			
+			UserDAO userDAO = new UserDAO();
+			UserVO user = userDAO.getUser(vo);
+			
+			
+			if(user != null) {
+				response.sendRedirect("getBoardList.do");
+			}else {
+				response.sendRedirect("login.jsp");
+			}
+			
+			
+			
+			
+			
+		}else if (path.equals("/logout.do")) {
+			HttpSession session = request.getSession();
+			session.invalidate();
+			
+			response.sendRedirect("/");
+			
+			
+			
+			
+			
+			
+			
+			
+			
+		}else if(path.equals("/insertBoard.do")) {
+			String title = request.getParameter("title");
+			String writer = request.getParameter("writer");
+			String content = request.getParameter("content");
+			
+			BoardVO vo = new BoardVO();
+			vo.setTitle(title);
+			vo.setWriter(writer);
+			vo.setContent(content);
+			
+			BoardDAO boardDAO = new BoardDAO();
+			boardDAO.insertBoard(vo);
+			
+			response.sendRedirect("getBoardList.do");
+			
+			
+			
+			
+			
+			
+		}else if(path.equals("/updateBoard.do")) {
+			
+			String title = request.getParameter("title");
+			String content = request.getParameter("content");
+			//String writer = request.getParameter("writer");
+			String seq = request.getParameter("seq");
+			
+			BoardVO vo = new BoardVO();
+			vo.setTitle(title);
+			vo.setContent(content);
+			vo.setSeq(Integer.parseInt(seq));
+			
+			BoardDAO boardDAO = new BoardDAO();
+			boardDAO.updateBoard(vo);
+			
+			response.sendRedirect("getBoardList.do");
+			
+		}else if(path.equals("/deleteBoard.do")) {
+			
+			String seq = request.getParameter("seq");
+
+		    BoardVO vo = new BoardVO();
+		    vo.setSeq(Integer.parseInt(seq));
+
+		    BoardDAO boardDAO = new BoardDAO();
+		    boardDAO.deleteBoard(vo);
+
+		    response.sendRedirect("getBoardList.do");
+			
+			
+		}else if(path.equals("/getBoard.do")) {
+			
+			String seq = request.getParameter("seq");
+			
+			BoardVO vo = new BoardVO();
+			vo.setSeq(Integer.parseInt(seq));
+			
+			BoardDAO boardDAO = new BoardDAO();
+			BoardVO board = boardDAO.getBoard(vo);
+			
+			HttpSession session = request.getSession();
+			session.setAttribute("board", board);
+			
+			response.sendRedirect("getBoard.jsp");
+			
+			
+			
+			
+		}else if(path.equals("/getBoardList.do")) {
+			
+			//BoardVO vo = new BoardVO();
+			
+			BoardDAO boardDAO = new BoardDAO();
+			List<BoardVO> boardList = boardDAO.getBoardList();
+			
+			HttpSession session = request.getSession();
+			session.setAttribute("boardList", boardList);
+			
+			response.sendRedirect("getBoardList.jsp");
+		}
+		
+	}
+
+}
+
+```
+
+### 로그인 예시
+```java
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body align="center"> 
+	<h1>로 그 인</h1>  
+	<hr>
+	<form action="login.do" method="post">
+		<table border="1" cellpadding="0" cellspacing="0">
+			<tr>
+				<td bgcolor="lightgray">아이디 : </td>
+				<td><input type="text" name="id"></td>
+			</tr>
+			<tr>
+				<td bgcolor="lightgray">비밀번호 : </td>
+				<td><input type="password" name="password"></td>
+			</tr>
+			<tr>
+				<td colspan="2"><input type="submit" value="로그인"></td>
+			</tr>
+		</table>
+	</form>
+</body>
+</html>
+
+```
+
+### 로그인에서 넘어가서 list처리
+```java
+<%@page import="java.util.ArrayList"%>
+<%@page import="com.mycompany.biz.board.BoardVO"%>
+<%@page import="com.mycompany.biz.board.impl.BoardDAO"%>
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<%	
+	
+	BoardDAO boardDAO = new BoardDAO();
+	BoardVO boardVO = new BoardVO();
+
+	ArrayList<BoardVO> boardList = (ArrayList<BoardVO>) session.getAttribute("boardList");
+
+%>
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style type="text/css">
+	
+	th {background: lightgray;}
+	
+	div {text-align: center;}
+	
+</style>
+</head>
+<body>
+	<div>
+		<h1>글 목록</h1>
+		<h3>테스트님 환영합니다...<a href="logout.do">로그아웃</a></h3>
+		
+		
+		<form action="getBoardList.do" method="post">
+			<table border="1">
+				<tr>
+					<td align="right">
+						<select name="search">
+							<option value="TITLE">제목
+							<option value="CONTENT">내용
+						</select>
+						<input name="searchKeyword" type="text">&nbsp;
+						<input type="submit" value="검색">
+					</td>
+				</tr>
+			</table>
+		</form>
+		
+		
+		<table border="1" width="700px">
+			<tr>
+				<th width="100">번호</th>
+				<th width="200">제목</th>
+				<th width="200">작성자</th>
+				<th width="200">등록일</th>
+				<th width="200">조회수</th>
+			</tr>
+			<% for(BoardVO board: boardList) {%>
+			<tr>
+				<td><%=board.getSeq() %></td>
+				<td><a href="getBoard.do?seq=<%=board.getSeq()%>"><%=board.getTitle() %></a></td>
+				<td><%=board.getWriter() %></td>
+				<td><%=board.getRegDate() %></td>
+				<td><%=board.getCnt() %></td>
+			</tr>
+			<%
+				}
+			%>
+		</table><br>
+		<a href="insertBoard.jsp">새글 등록</a>
+		
+	</div>
+</body>
+</html>
+```
