--- a/6월 4주차/6월 22일.MD
+++ b/6월 4주차/6월 22일.MD
@@ -9,6 +9,19 @@
 - Dispatcher로 처리해서 만들기
 - web.xeml 설정해서 localhost:8080에서 바로 메인 뜨게 만들기 ( tomcat에서 / 처리)
 
+
+### utf-8 설정은 process보다 먼저 해줘야한다.
+```java
+	protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+		
+		request.setCharacterEncoding("utf-8");
+		
+		process(request, response);
+		
+		
+	}
+```
+
 ### web xml
 ```xml
 	<welcome-file-list>
