--- a/6월 4주차/6월 23일.MD
+++ b/6월 4주차/6월 23일.MD
@@ -6,5 +6,4 @@
 -----------------------------------------------------
 
 ## 학습목표
-- Dispatcher로 처리해서 만들기
-- web.xeml 설정해서 localhost:8080에서 바로 메인 뜨게 만들기 ( tomcat에서 / 처리)
+- Spring 프레임워크를 활용한 MVC2 (XML)
