--- a/6월 4주차/6월 23일.MD
+++ b/6월 4주차/6월 23일.MD
@@ -1,7 +1,7 @@
 # Review
 
-- Spring에서 Database 연동구현 >> JdbcTemplate
-- Spring에서 Transaction 구현
+- Dispatcher로 처리해서 만들기
+- web.xeml 설정해서 localhost:8080에서 바로 메인 뜨게 만들기 ( tomcat에서 / 처리)
 
 -----------------------------------------------------
 
