--- a/6월 4주차/6월 23일.MD
+++ b/6월 4주차/6월 23일.MD
@@ -7,3 +7,13 @@
 
 ## 학습목표
 - Spring 프레임워크를 활용한 MVC2 (XML)
+
+
+### 적어주신것
+```
+1. 로그인 버튼을 클리하면 login.do 요청을 서버에 전달
+2. 서블릿컨테이너 web.xml을 읽고 action이름으로 등록된 Dispatcher클래스 객체생성
+3. action-servlet.xml 스프링 설정파일을 찾아서 로딩
+4. 이떄 DispatcherServlet이 사용할 handlerMapping, Controller, ViewResolver클래스가 bean으로 등록된 객체들을 생성
+5. DispatcherServlet은 객체들간 상호작용해서 스프링컨테이너가 구동하면서 서비스를 진행한다.
+```
