--- a/6월 5주차/6월 26일.MD
+++ b/6월 5주차/6월 26일.MD
@@ -6,4 +6,12 @@
 -----------------------------------------------------
 
 ## 학습목표
-- Spring 프레임워크를 활용한 MVC2 (XML)
+- Annotation을 활용한 Spring MVC구현
+```
+@Controller
+@RequestMapping(value = "/deleteBoard.do" method=RequestMethod.GET/POST)
+Command객체
+Return String + model.setAttribute("",값)
+@Controller 통합
+```
+
