--- a/6월 5주차/6월 26일.MD
+++ b/6월 5주차/6월 26일.MD
@@ -15,3 +15,17 @@ Return String + model.setAttribute("",값)
 @Controller 통합
 ```
 
+### 적어주신것
+```
+*.do 요청이 있을 때 web,xml에 등록된 Dispatcher객체를 생성한다.
+
+Dispatcher의 init()가 자동실행 되면서
+
+Dispatcher가 XmlWebApplicationContext로 스프링컨테이너를 구동 시킨다.
+
+스프링컨테이너를 구동시킬때 DispatcherServlet은 name-servlet.xml설정파일을 찾는다.
+
+Dispatcher는 HandlerMapping, Controler, ViewResolver객체들과 상호 작용하면서 클라이언트 요청을 처리한다.
+```
+
+
