--- a/6월 5주차/6월 26일.MD
+++ b/6월 5주차/6월 26일.MD
@@ -25,7 +25,7 @@ Dispatcher가 XmlWebApplicationContext로 스프링컨테이너를 구동 시킨
 
 스프링컨테이너를 구동시킬때 DispatcherServlet은 name-servlet.xml설정파일을 찾는다.
 
-Dispatcher는 HandlerMapping, Controler, ViewResolver객체들과 상호 작용하면서 클라이언트 요청을 처리한다.
+Dispatcher는 HandlerMapping, Controller, ViewResolver객체들과 상호 작용하면서 클라이언트 요청을 처리한다.
 ```
 
 ## annotation 이용 addressbook 만들기
