--- a/6월 5주차/6월 27일.MD
+++ b/6월 5주차/6월 27일.MD
@@ -14,3 +14,9 @@ Command객체
 Return String + model.setAttribute("",값)
 @Controller 통합
 ```
+
+
+### (@ModelAttribute("board")
+- public String updateBoard(@ModelAttribute("board") BoardVO vo, BoardDAO boardDAO)
+
+### @SessionAttributes("board")
