--- a/6월 5주차/6월 27일.MD
+++ b/6월 5주차/6월 27일.MD
@@ -6,17 +6,27 @@
 -----------------------------------------------------
 
 ## 학습목표
-- Annotation을 활용한 Spring MVC구현
+- @SessionAttribute()와 @ModelAttribute()를 활용한 Null 업데이트 예방
+- Front Layer와 Business Layer의 통합 (ContextLoaderListener)
+- 목록 리스트의 검색기능 구현 실습
 ```
-@Controller
-@RequestMapping(value = "/deleteBoard.do" method=RequestMethod.GET/POST)
-Command객체
-Return String + model.setAttribute("",값)
-@Controller 통합
+- jsp의 Option에 value값 지정 > BoardVO에 파라미터 추가
+- DAO의 if문을 활용한 조건별 Query 구현
+
+참조 및 필요 부분 고려하여 구현해보기
 ```
 
+## 팀 프로젝트 진도 목표 : ~6/30(금)
+- 프로젝트 명
+- 컨셉도출
+- 페르소나 작성
+- 사용자 요구사항 분석 >>> Use Case 다이어그램
+- ***업무분장 및 일정계획***
 
-### (@ModelAttribute("board")
+
+
+### null값 없애기
+#### (@ModelAttribute("board")
 - public String updateBoard(@ModelAttribute("board") BoardVO vo, BoardDAO boardDAO)
 
-### @SessionAttributes("board")
+#### @SessionAttributes("board")
