--- a/6월 5주차/6월 27일.MD
+++ b/6월 5주차/6월 27일.MD
@@ -30,3 +30,35 @@
 - public String updateBoard(@ModelAttribute("board") BoardVO vo, BoardDAO boardDAO)
 
 #### @SessionAttributes("board")
+
+
+# AOP 트랜잭션
+```
+트랜잭션은 데이터베이스 상태를 변화시키는 작업의 논리적 단위를 나타내는 개념입니다. 
+여러 개의 데이터베이스 작업이 하나의 트랜잭션으로 묶일 때, 이 작업들은 모두 성공하거나 모두 실패해야 합니다. 
+트랜잭션은 데이터 일관성과 안전한 데이터 조작을 보장하기 위해 사용됩니다.
+
+트랜잭션은 "원자성(Atomicity)", "일관성(Consistency)", "독립성(Isolation)", "지속성(Durability)"을 나타내는 ACID 원칙을 따릅니다.
+
+원자성(Atomicity): 
+트랜잭션은 모든 작업이 완벽하게 수행되거나 아무런 작업도 수행되지 않은 상태를 보장합니다. 
+트랜잭션의 모든 단계가 성공적으로 실행되거나, 어떠한 단계에서 오류가 발생하면 이전 상태로 롤백됩니다.
+
+일관성(Consistency): 
+트랜잭션이 시작하기 전과 후에도 데이터베이스는 일관된 상태를 유지해야 합니다. 트랜잭션이 수행하는 작업은 정의된 규칙과 제약 조건을 준수해야 합니다.
+
+독립성(Isolation): 
+동시에 실행 중인 여러 개의 트랜잭션은 서로 영향을 주지 않고 독립적으로 실행되는 것처럼 보여야 합니다. 
+하나의 트랜잭션이 다른 트랜잭션의 작업을 간섭하지 않도록 격리 수준을 제공합니다.
+
+지속성(Durability): 
+트랜잭션이 성공적으로 완료되면, 그 결과는 영구적으로 데이터베이스에 반영되어야 합니다. 
+시스템 장애 또는 전원 손실과 같은 문제가 발생하더라도 데이터는 안전하게 보존되어야 합니다.
+
+이렇게 트랜잭션을 사용하면 데이터의 무결성과 일관성을 보장할 수 있으며, 
+예기치 않은 문제가 발생했을 때도 데이터베이스를 이전의 일관된 상태로 롤백할 수 있습니다. 
+이는 데이터베이스 시스템에서 안정성과 신뢰성을 유지하는 데 도움이 됩니다.
+```
+
+
+
