--- a/6월 5주차/6월 28일.MD
+++ b/6월 5주차/6월 28일.MD
@@ -1,20 +1,14 @@
 # Review
 
-- Dispatcher로 처리해서 만들기
-- web.xeml 설정해서 localhost:8080에서 바로 메인 뜨게 만들기 ( tomcat에서 / 처리)
+- @SessionAttribute()와 @ModelAttribute()를 활용한 Null 업데이트 예방
+- Front Layer와 Business Layer의 통합 (ContextLoaderListener)
 
 -----------------------------------------------------
 
 ## 학습목표
-- @SessionAttribute()와 @ModelAttribute()를 활용한 Null 업데이트 예방
-- Front Layer와 Business Layer의 통합 (ContextLoaderListener)
-- 목록 리스트의 검색기능 구현 실습
-```
-- jsp의 Option에 value값 지정 > BoardVO에 파라미터 추가
-- DAO의 if문을 활용한 조건별 Query 구현
-
-참조 및 필요 부분 고려하여 구현해보기
-```
+- 검색 구현
+- 파일 업로드
+- 예외 처리
 
 ## 팀 프로젝트 진도 목표 : ~6/30(금)
 - 프로젝트 명
