--- a/6월 5주차/6월 28일.MD
+++ b/6월 5주차/6월 28일.MD
@@ -16,3 +16,14 @@
 - 페르소나 작성
 - 사용자 요구사항 분석 >>> Use Case 다이어그램
 - ***업무분장 및 일정계획***
+
+
+### 파일 업로드
+```xml
+		<!-- 3. 파일업로드 라이브러리 추가 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+```
