--- a/6월 5주차/6월 28일.MD
+++ b/6월 5주차/6월 28일.MD
@@ -27,3 +27,21 @@
 			<version>1.3.1</version>
 		</dependency>
 ```
+
+### vo 추가
+- get set
+```java
+// uploadFile
+	private MultipartFile uploadFile;
+```
+
+### Insert에 추가
+```java
+		MultipartFile uploadFile = vo.getUploadFile();
+		if( !uploadFile.isEmpty()) {							// 업로드한 파일의 존재여뷰확인
+			String fileName = uploadFile.getOriginalFilename();	// 업로드한 파일명
+			uploadFile.transferTo(new File("C:\\Users\\1\\Desktop\\Directory-Hoony\\spring\\file"+fileName));
+		}
+		
+		boardService.insertBoard(vo);
+```
