--- a/6월 5주차/6월 28일.MD
+++ b/6월 5주차/6월 28일.MD
@@ -45,3 +45,19 @@
 		
 		boardService.insertBoard(vo);
 ```
+
+### presentation.xml에 추가 (config)
+```xml
+	<!--
+		CommonsMultipartResolver
+			; 파일 업로드 처리를 해준다.
+				. vo를 생성하고
+				. 클라이언트의 정보를 생성된 vo에 설정
+				. insertBoard(BoardVO vo)를 호출할떄 커맨드 객체로 전달해주는 역할을 해준다.
+	 
+	 -->
+	
+	<bean id="mutipartResolver" class="org.springframework.web.multipart.commons.CommonsMultipartResolver">
+		<property name="maxUploadSize" value="-1"></property>
+	</bean>
+```
