--- a/6월 5주차/6월 28일.MD
+++ b/6월 5주차/6월 28일.MD
@@ -61,3 +61,83 @@
 		<property name="maxUploadSize" value="-1"></property>
 	</bean>
 ```
+
+## Error 제외 페이지 만들기
+
+### presentation.xml에서 mvc 추가하기
+
+### view쪽 common패키지에 CommonExceptionHandler만들기
+```java
+package com.mycompany.view.common;
+
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.servlet.ModelAndView;
+
+@ControllerAdvice("com.mycompany.biz")
+public class CommonExceptionHandler {
+	
+	@ExceptionHandler(ArithmeticException.class)
+	public ModelAndView handlerArithmethicException(Exception e) {
+		
+		
+		ModelAndView mav = new ModelAndView();
+		mav.addObject("exception", e); // 해당 예외객체
+		mav.setViewName(""); // 예외처리를 보여줄 페이지 경로
+		
+		return mav;
+	}
+	
+	@ExceptionHandler(NullPointerException.class)
+	public ModelAndView handlerNullException(Exception e) {
+		
+		ModelAndView mav = new ModelAndView();
+		mav.addObject("exception", e);
+		mav.setViewName("");
+		
+		return mav;
+	}
+	
+	@ExceptionHandler(Exception.class)
+	public ModelAndView handlerException(Exception e) {
+		
+		ModelAndView mav = new ModelAndView();
+		mav.addObject("exception", e);
+		mav.setViewName("");
+		return mav;
+	}
+	
+}
+```
+
+### Error jsp
+- isErrorPage="true" 잊지말기
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8" isErrorPage="true"%>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<table width="100%" border="1" cellspacing="0" cellpadding="0">
+		<tr>
+			<td align="center" bgcolor="orange">오류 페이지 입니다.</td>
+		</tr>
+	</table>
+	<table width="100%" border="1" cellspacing="0" cellpadding="0" align="center">
+		<tr>
+			<td>
+			오류 페이지 입니다.
+			</td>
+		</tr>
+	</table>
+</body>
+</html>
+```	
+
+
+
+
