--- a/6월 5주차/6월 28일.MD
+++ b/6월 5주차/6월 28일.MD
@@ -65,6 +65,11 @@
 ## Error 제외 페이지 만들기
 
 ### presentation.xml에서 mvc 추가하기
+- presentaion.xml에 아래 추가하기
+```xml
+	<!-- 예외처리 -->
+	<mvc:annotation-driven></mvc:annotation-driven>
+```
 
 ### view쪽 common패키지에 CommonExceptionHandler만들기
 ```java
