--- a/6월 5주차/6월 28일.MD
+++ b/6월 5주차/6월 28일.MD
@@ -135,7 +135,9 @@ public class CommonExceptionHandler {
 	<table width="100%" border="1" cellspacing="0" cellpadding="0" align="center">
 		<tr>
 			<td>
-			오류 페이지 입니다.
+				<br><br><br>
+				Message: ${exception.message }
+				<br><br><br>
 			</td>
 		</tr>
 	</table>
