--- a/6월 5주차/6월 28일.MD
+++ b/6월 5주차/6월 28일.MD
@@ -145,6 +145,26 @@ public class CommonExceptionHandler {
 </html>
 ```	
 
-
+### LoginController 에러처리
+- IllegalAccessError 랑 IllegalAccessException 헷갈리지말기
+```java
+	// 세션 등록하기
+	@RequestMapping(value="/login.do", method = RequestMethod.POST)
+	public String login(UserVO vo, UserDAO userDAO, HttpSession session) throws IllegalAccessException{
+		
+		if (vo.getId() == null || vo.getId()=="") {
+		    throw new IllegalAccessException("아이디는 반드시 입력하여야 합니다.");
+		}
+		
+		if(userDAO.getUser(vo) != null) {
+			session.setAttribute("userName", userDAO.getUser(vo).getName());
+			return "redirect:getBoardList.do";
+		}
+		else {
+			return "redirect:login.jsp";
+		}
+		
+	}
+```
 
 
