--- a/6월 5주차/6월 29일.MD
+++ b/6월 5주차/6월 29일.MD
@@ -6,9 +6,11 @@
 -----------------------------------------------------
 
 ## 학습목표
-- 검색 구현
-- 파일 업로드
-- 예외 처리
+- 다국어처리
+- 데이터 변환
+
+- 오전 : 팀별 포트폴리오
+- 오후 : 수업진도
 
 ## 팀 프로젝트 진도 목표 : ~6/30(금)
 - 프로젝트 명
