--- a/6월 5주차/6월 29일.MD
+++ b/6월 5주차/6월 29일.MD
@@ -18,3 +18,27 @@
 - 페르소나 작성
 - 사용자 요구사항 분석 >>> Use Case 다이어그램
 - ***업무분장 및 일정계획***
+
+
+## 다국어처리
+```
+		1. 메시지를 읽어오는 클래스 	-	ResourceBundleMessageSource
+			- 지정된 id로 작성하세요.
+			- 이름규칙
+				message	.	messageSource	_en	.	properties
+						|					X			X
+						
+				패키지명				파일명
+											
+			
+		2. 지역(Locale) 인지 해석하는 클래스
+			- 지정 id로 작성
+			- locale정보 읽어오기
+				. AcceptHeaderLocaleResolver	:	디폴트, HTTP요청헤더에서 locale메시지를 얻어 지정
+				. SessionLocaleResolver			:	세션에 저장된 Locale정보 적용
+				. FixedLocaleResolver			:	웹 요청과 무관하게 특정 지역언어지정
+		3. 변경처리하는 클래스
+			- 화면에서 언어를 선택하여 변경처리하고 싶을때
+			- 네임스페이스에서 mvc 지정
+		
+```
