--- a/6월 5주차/6월 29일.MD
+++ b/6월 5주차/6월 29일.MD
@@ -42,3 +42,10 @@
 	- 네임스페이스에서 mvc 지정
 		
 ```
+
+### src/main/resources 에 message폴더 만들고 저장해둔 txt properties를 넣
+
+### view 페이지에 넣기
+```jsp
+<%@ taglib prefix="spring" uri="http://www.springframework.org/tags" %>
+```
