--- a/6월 5주차/6월 29일.MD
+++ b/6월 5주차/6월 29일.MD
@@ -19,6 +19,11 @@
 - 사용자 요구사항 분석 >>> Use Case 다이어그램
 - ***업무분장 및 일정계획***
 
+# 오타를 조심하자!
+- localResolver -> localeResolver 변경
+```
+<bean id="localeResolver" class="org.springframework.web.servlet.i18n.SessionLocaleResolver"></bean>
+```
 
 ## 다국어처리
 ```
@@ -43,9 +48,83 @@
 		
 ```
 
-### src/main/resources 에 message폴더 만들고 저장해둔 txt properties를 넣
+### src/main/resources 에 message폴더 만들고 저장해둔 txt properties를 넣기
 
 ### view 페이지에 넣기
 ```jsp
 <%@ taglib prefix="spring" uri="http://www.springframework.org/tags" %>
+```
+
+
+### presentation.xml에 추가할것
+```xml
+	<bean id="messageSource" class="org.springframework.context.support.ResourceBundleMessageSource">
+		<property name="basenames">
+			<list>
+				<value>message.messageSource</value>
+			</list>
+		</property>
+	</bean>
+	
+	<bean id="localeResolver" class="org.springframework.web.servlet.i18n.SessionLocaleResolver"></bean>
+	
+	<mvc:interceptors>
+		<bean class="org.springframework.web.servlet.i18n.LocaleChangeInterceptor">
+			<property name="paramName" value="lang"></property>
+		</bean>
+	</mvc:interceptors>
+```
+
+### login.jsp 변환사항
+```jsp
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
+<%@ taglib prefix="spring" uri="http://www.springframework.org/tags" %>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title><spring:message code="message.user.login.title"/></title>
+<style type="text/css">
+	table {
+		border-collapse: collapse;
+	}
+	input{
+		border: 0px;
+	}
+</style>
+</head>
+<body>
+	<div align="center">
+		<h1><spring:message code="message.user.login.title"/></h1>
+		<a href="login.do?lang=en">
+			<spring:message code="message.user.login.language.en"/></a>&nbsp;&nbsp;
+		<a href="login.do?lang=ko">
+			<spring:message code="message.user.login.language.ko"/></a>
+		<hr>
+		
+		
+		
+		<form action="login.do" method="post">
+			<table border="1">
+				<tr>
+					<td bgcolor="lightgray"><spring:message code="message.user.login.id"/></td>
+					<td><input type="text" name="id" value="${user.id }" /></td>
+				</tr>
+				<tr>
+					<td bgcolor="lightgray"><spring:message code="message.user.login.password"/></td>
+					<td><input type="password" name="password" value="${user.password }"/></td>
+				</tr>
+				<tr>
+					<td colspan="2" align="center"><input type="submit" 
+						value="<spring:message code="message.user.login.loginBtn"/>"></td>
+				</tr>
+			</table>
+		</form>
+	</div>
+</body>
+</html>
+
+
+
 ```
