--- a/6월 5주차/6월 30일.MD
+++ b/6월 5주차/6월 30일.MD
@@ -6,8 +6,7 @@
 -----------------------------------------------------
 
 ## 학습목표
-- 다국어처리
-- 데이터 변환
+- Mybatis 활용
 
 - 오전 : 팀별 포트폴리오
 - 오후 : 수업진도
@@ -18,3 +17,5 @@
 - 페르소나 작성
 - 사용자 요구사항 분석 >>> Use Case 다이어그램
 - ***업무분장 및 일정계획***
+
+## jsp로 수업진행 (단톡방 파일)
