--- a/6월 5주차/6월 30일.MD
+++ b/6월 5주차/6월 30일.MD
@@ -19,3 +19,6 @@
 - ***업무분장 및 일정계획***
 
 ## jsp로 수업진행 (단톡방 파일)
+
+### 아래에서 3.2.5 mybatis 다운받고 lib에 넣기
+https://github.com/mybatis/mybatis-3/releases?page=3
