--- a/6월 5주차/6월 30일.MD
+++ b/6월 5주차/6월 30일.MD
@@ -22,3 +22,6 @@
 
 ### 아래에서 3.2.5 mybatis 다운받고 lib에 넣기
 https://github.com/mybatis/mybatis-3/releases?page=3
+
+### MyPorjectDao 만들기
+- SqlSession 활용 (mybatis-3.2.5.jar 내용)
