--- a/6월 5주차/6월 30일.MD
+++ b/6월 5주차/6월 30일.MD
@@ -24,4 +24,5 @@
 https://github.com/mybatis/mybatis-3/releases?page=3
 
 ### MyPorjectDao 만들기
-- SqlSession 활용 (mybatis-3.2.5.jar 내용)
+- 의존객체 주입
+-	SqlSessionFactory SqlSessionFactory;
