--- a/6월 5주차/6월 30일.MD
+++ b/6월 5주차/6월 30일.MD
@@ -26,3 +26,62 @@ https://github.com/mybatis/mybatis-3/releases?page=3
 ### MyPorjectDao 만들기
 - 의존객체 주입
 -	SqlSessionFactory SqlSessionFactory;
+
+
+### db.properties
+```
+driver=com.mysql.jdbc.Driver
+url=jdbc:mysql://localhost:3306/studyDB
+username=root
+password=mysql
+```
+
+### mySqlProjectDao.xml
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+
+<!DOCTYPE mapper  PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"   "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+
+<mapper>
+	
+	<resultMap type="project" id="projectResultMap">
+		<id 	column="PNO"		property="no"/>
+		<result column="PNAME"		property="title"/>
+		<result column="CONTENT"	property="content"/>
+		<result column="STA_DATE" 	property="startDate" javaType="java.sql.Date"/>
+		<result column="END_DATE" 	property="endDate" javaType="java.sql.date"/>
+		<result column="STATE" 		property="state"/>
+		<result column="CRE_DATE" 	property="createDate" javaType="java.sql.Date"/>
+		<result column="TAGS" 		property="tags"/>
+		
+	</resultMap>
+	<select id="selectList" resultMap="projectResultMap">
+		select PNO, PNAME, STA_DATE, END_DATE, STATE from PROJECTS 
+			order by PNO desc
+	</select>
+	<select id="selectOne" parameterType="int" resultMap="projectResultMap">
+		select PNO, PNAME, CONTENT, STA_DATE, END_DATE, STATE, CRE_DATE, TAGS
+			from PROJECTS
+			where PNO=#{value}
+	</select>
+	<insert id="insert" parameterType="project">
+		insert into PROJECTS(PNAME, CONTENT, STA_DATE, END_DATE, STATE, CRE_DATE, TAGS)
+			value ( #{title), #{content}, #{startDate}, #{endDate}, 0, now(), #{tags} )
+	</insert>
+	<update id="update" parameterType="project">
+		update PROJECTS set
+			PNAME = #{title},
+			CONTENT = #{content},
+			STA_DATE = #{startDate},
+			STATE = #{state},
+			TAGS = #{tags}
+		where PNO = #{no}
+	</update>
+	<delete id="delete" parameterType="int">
+		delete from PROJECTS where PNO=#{value}
+	</delete>
+	
+</mapper>
+
+
+```
