--- a/7월 1주차/7월 3일.MD
+++ b/7월 1주차/7월 3일.MD
@@ -1,19 +1,45 @@
 # Review
 
-- @SessionAttribute()와 @ModelAttribute()를 활용한 Null 업데이트 예방
-- Front Layer와 Business Layer의 통합 (ContextLoaderListener)
+```
+((BOARD SERVICE))
+BoardServiceImpl                                                             SqlSessionFactory
+  .insert() {                                                                  = new SqlSessionFactoryBuilder().builder(reader);
+    boardDao.insertBoard(vo)    <<< BoardDAO - JDBCUtil
+                                                JdbcTemplete
+}
+  .update() {
+    boardDao.updateBoard(vo)    <<< MybatisBoardDAO  -  SqlSession  sqlSession.insert(), update 등
+}
+
+db.properties
+                          mybatis_config.xml    -    contextLoaderListener
+MySqlProjectDAO.xml
+
+```
 
 -----------------------------------------------------
 
 ## 학습목표
-- Mybatis 활용
+- Spring에서 Mybatis 구현
 
-- 오전 : 팀별 포트폴리오
-- 오후 : 수업진도
+- Spring 정기 평가 7/5~7/6 예정 ---> Android
+```
+ 개인 포폴
+  - IoC
+  - AOP
+  - 다국어 처리
+  - 트랜잭션 등
+```
 
-## 팀 프로젝트 진도 목표 : ~6/30(금)
-- 프로젝트 명
-- 컨셉도출
-- 페르소나 작성
-- 사용자 요구사항 분석 >>> Use Case 다이어그램
-- ***업무분장 및 일정계획***
+
+
+
+
+
+
+
+
+
+
+
+
