--- a/7월 1주차/7월 3일.MD
+++ b/7월 1주차/7월 3일.MD
@@ -27,12 +27,35 @@ MySqlProjectDAO.xml
  개인 포폴
   - IoC
   - AOP
-  - 다국어 처리
-  - 트랜잭션 등
+  - 트랜잭션 - Insert 2회 처리시 적용
+  - 예외처리
+  - 다국어 - view페이지 메뉴
+  - Mybatis 적용
+
+>>> CRUD구현 로직 활용 삭이내용 포함
+
+>>> 평가방식 : 완성 코드 제출 시연
+
 ```
 
+## 이클립스 jsp는 파일로 보기
 
-
+## Spring에서 myBatis 적용
+- pom.xml
+```xml
+<!-- Mybatis 라이브러리 추가 -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.2.4</version>
+		</dependency>
+```
 
 
 
