--- a/7월 1주차/7월 4일.MD
+++ b/7월 1주차/7월 4일.MD
@@ -1,21 +1,15 @@
 # Review
 
-```
-((BOARD SERVICE))
-BoardServiceImpl                                                             SqlSessionFactory
-  .insert() {                                                                  = new SqlSessionFactoryBuilder().builder(reader);
-    boardDao.insertBoard(vo)    <<< BoardDAO - JDBCUtil
-                                                JdbcTemplete
-}
-  .update() {
-    boardDao.updateBoard(vo)    <<< MybatisBoardDAO  -  SqlSession  sqlSession.insert(), update 등
-}
+### Mybatis
+- pom.xml : 라이브러리 추가
+- db.properties 작성
+- Sql Mapper 작성 (board-mappng.xml)
+- Mybatis 환경설정파일 작성 (sql-map-config.xml)
+- applicationContext.xml 코드 작성
+- DAO작성 (BoardDAO_mybatis)
+- BoardServiceImpl에 DAO 의존주입
+- Controller에 BoardServiceImpl 의존주입
 
-db.properties
-                          mybatis_config.xml    -    contextLoaderListener
-MySqlProjectDAO.xml
-
-```
 
 -----------------------------------------------------
 
