--- a/7월 1주차/7월 4일.MD
+++ b/7월 1주차/7월 4일.MD
@@ -14,9 +14,9 @@
 -----------------------------------------------------
 
 ## 학습목표
-- Spring에서 Mybatis 구현
+- AddressBook - IoC/AOP 적용 + 예외처리, 다국어처리, Mybatis 적용
 
-- Spring 정기 평가 7/5~7/6 예정 ---> Android
+- Spring 정기 평가 7/6 예정 ---> Android + Spring 추가
 ```
  개인 포폴
   - IoC
@@ -27,5 +27,4 @@
   - Mybatis 적용
 
 >>> CRUD구현 로직 활용 삭이내용 포함
-
 >>> 평가방식 : 완성 코드 제출 시연
