--- a/7월 1주차/7월 5일.MD
+++ b/7월 1주차/7월 5일.MD
@@ -29,7 +29,7 @@
 
                                                                   JPA구현체 종류 : Hibernate, TopLink, Cocobase 프레임워크
 
-  서비스처리 <----------------->    public Entity클래스     <------------------------------> DBMS 테이블
+  서비스처리 <ㅡㅡㅡㅡㅡㅡㅡㅡ>    public Entity클래스            <ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ> DBMS 테이블
                                     기본생성자
                                     식별자필드                                                  PK필드
                                     필드                              persistence.xml          필드
