--- a/7월 1주차/7월 5일.MD
+++ b/7월 1주차/7월 5일.MD
@@ -25,7 +25,7 @@
 ```
 (JDBC / Mybatis)                                                  JPA(Java persistence API)
  SQL명령어 직접 작성                                                SQL 자동생성 / 자동 변경
- . Java객체와 << - >> DBMS테이블 매핑 어려움                        유지보수 편리
+ . Java객체와 ㅡㅡ DBMS테이블 매핑 어려움                        유지보수 편리
 
                                                                   JPA구현체 종류 : Hibernate, TopLink, Cocobase 프레임워크
 
