--- a/7월 1주차/7월 5일.MD
+++ b/7월 1주차/7월 5일.MD
@@ -20,7 +20,7 @@
   - Mybatis 적용
 ```
 
-## OREM(Object Relation Mapping)프레임워크(JPA)
+## ORM(Object Relation Mapping)프레임워크(JPA)
 
 ```
 (JDBC / Mybatis)                                                  JPA(Java persistence API)
@@ -36,4 +36,34 @@
                                     날짜필드                          (JPA 환경설정)            필드
                                     제외 할 필드
 ```
-  
+
+
+
+# Hibernate 적용사항
+```
+pom.xml 추가
+
+		<!-- Jackson2라이브러리 추가 : Json/xml처리 라이브러리 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+
+ 		<!-- JPA 하이버네이트 라이브러리 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+		</dependency>
+
+
+```
+
+
+
+
