--- a/7월 1주차/7월 5일.MD
+++ b/7월 1주차/7월 5일.MD
@@ -61,6 +61,10 @@ pom.xml 추가
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>5.1.0.Final</version>
 		</dependency>
+
+		<!-- 
+			@XmlRootElement, @XmlAccessorType 어노테이션 사용할 수 있다.
+		 -->
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
