--- a/7월 1주차/7월 5일.MD
+++ b/7월 1주차/7월 5일.MD
@@ -72,6 +72,33 @@ pom.xml 추가
 		</dependency>
 
 
+
+
+applicationContext.xml
+	<!-- Spring과 JPA 연동설정 -->
+	<bean id="jpaVendorAdapter" class="org.springframework.orm.jpa.vendor.HibernateJpaVendorAdapter"></bean>
+	<bean id="entityManagerFactory" class="org.springframework.orm.jpa.LocalContainerEntityManagerFactoryBean">
+		<property name="dataSource" ref="dataSource"></property>
+		<property name="jpaVendorAdapter" ref="jpaVendorAdapter"></property>
+		<property name="packagesToScan" value="com.mycompany.biz.board"></property>
+		<property name="jpaProperties">
+			<props>
+				<prop key="hibernate.dialect">org.hibernate.dialect.MySQLDialect</prop> <!-- MYSQL 쿼리 적용 생성 -->
+				<prop key="hibernate.show_sql">true</prop>			<!-- 생성된 SQL을 콘솔에 출력 여부 -->
+				<prop key="hibernate.format_sql">true</prop>		<!-- 출력할 때 정해진 폼으로 출력 -->
+				<prop key="hibernate.use_sql_comments">true</prop>	<!-- SQL에 주석 포함 여부 -->
+				<prop key="hibernate.id.new_generator_mappings">true</prop>	<!-- 새로운 키 생성 전략 사용 여부 -->
+				<prop key="hibernate.hbm2ddl.auto">create</prop>	<!-- 중요: 테이블 생성, 수정, 삭제 DDL 처리 방식 -->
+			</props>
+		</property>
+	</bean>
+	
+	<!-- Transaction 설정 -->
+
+	<bean id="txManager" class="org.springframework.orm.jpa.JpaTransactionManager"> 
+		<property name="entityManagerFactory" ref="entityManagerFactory"></property>
+	</bean>
+
 ```
 
 
