--- a/7월 1주차/7월 5일.MD
+++ b/7월 1주차/7월 5일.MD
@@ -38,6 +38,22 @@
 ```
 
 
+## 이론
+```
+@Entity
+데이터베이스(Database, DB) 에 쓰일 필드와 여러 엔티티간 연관관계를 정의한다. 데이터베이스는 엑셀처럼 2차원 테이블이라고 생각하면 되는데,
+이 테이블에 서비스에서 필요한 정보를 다 저장하고 활용하게 된다.
+세로의 열 부분이 Column 이고, 가로의 행 부분이 엔티티 객체가 된다. 이 테이블 전체가 엔티티 이고, 각 1개의 행들이 엔티티 객체가 되는 것이라고 생각하면 된다
+
+
+@Repository
+Entity에 의해 생성된 DB에 접근하는 메서드(ex) findAll()) 들을 사용하기 위한 인터페이스이다.
+위에서 엔티티를 선언함으로써 데이터베이스 구조를 만들었다면, 여기에 어떤 값을 넣거나,
+넣어진 값을 조회하는 등의 CRUD(Create, Read, Update, Delete)를 해야 쓸모가 있는데,
+이것을 어떻게 할 것인지 정의해주는 계층이라고 생각하면 된다.
+
+```
+
 
 # Hibernate 적용사항
 ```
@@ -76,6 +92,10 @@ pom.xml 추가
 
 applicationContext.xml
 	<!-- Spring과 JPA 연동설정 -->
+	<!-- 
+		HibernateJpaVendorAdapter : JPA벤터지정...하이버네이트 사용
+		LocalContainerEntityManagerFactoryBean : EntityManager객체 반환해주는 클래스
+	 -->
 	<bean id="jpaVendorAdapter" class="org.springframework.orm.jpa.vendor.HibernateJpaVendorAdapter"></bean>
 	<bean id="entityManagerFactory" class="org.springframework.orm.jpa.LocalContainerEntityManagerFactoryBean">
 		<property name="dataSource" ref="dataSource"></property>
