--- a/7월 1주차/7월 5일.MD
+++ b/7월 1주차/7월 5일.MD
@@ -41,9 +41,11 @@
 ## 이론
 ```
 @Entity
-데이터베이스(Database, DB) 에 쓰일 필드와 여러 엔티티간 연관관계를 정의한다. 데이터베이스는 엑셀처럼 2차원 테이블이라고 생각하면 되는데,
+데이터베이스(Database, DB) 에 쓰일 필드와 여러 엔티티간 연관관계를 정의한다.
+데이터베이스는 엑셀처럼 2차원 테이블이라고 생각하면 되는데,
 이 테이블에 서비스에서 필요한 정보를 다 저장하고 활용하게 된다.
-세로의 열 부분이 Column 이고, 가로의 행 부분이 엔티티 객체가 된다. 이 테이블 전체가 엔티티 이고, 각 1개의 행들이 엔티티 객체가 되는 것이라고 생각하면 된다
+세로의 열 부분이 Column 이고, 가로의 행 부분이 엔티티 객체가 된다. 이 테이블 전체가 엔티티 이고,
+각 1개의 행들이 엔티티 객체가 되는 것이라고 생각하면 된다
 
 
 @Repository
@@ -125,11 +127,12 @@ applicationContext.xml
 ```java
 package com.mycompany.biz.board;
 
-import java.sql.Date;
+import java.util.Date;
 
 import javax.persistence.Entity;
 import javax.persistence.Id;
 import javax.persistence.Table;
+import javax.persistence.Transient;
 
 import org.springframework.web.multipart.MultipartFile;
 
@@ -142,7 +145,9 @@ public class BoardVO {
 	private String title;
 	private String writer;
 	private String content;
-	private Date regDate;
+
+	@Temporal(TemporalType.DATE)
+	private Date regDate = new Date();
 	private int cnt;
 	
 	//검색
@@ -150,6 +155,10 @@ public class BoardVO {
 	private String searchCondition;
 	@Transient // 매핑제외
 	private String searchKeyword;
+	
+	// 생성시 파일 업로드
+	@Transient // 매핑 제외
+	private MultipartFile uploadFile;
 
 	public int getSeq() {
 		return seq;
