--- a/7월 1주차/7월 5일.MD
+++ b/7월 1주차/7월 5일.MD
@@ -123,6 +123,15 @@ applicationContext.xml
 		
 	 -->
 
+
+BoardDAOJPA.java
+	@PersistenceContext
+		. EntityManager객체주입
+		
+	EntityManager의 CRUD메서드
+		. persist(Object entity)
+
+
 ```
 
 
@@ -317,4 +326,141 @@ public class BoardVO {
 }
 ```
 
+- BoardDAOJPA
+```
+package com.mycompany.biz.board.impl;
 
+import java.util.List;
+
+import javax.persistence.EntityManager;
+import javax.persistence.PersistenceContext;
+
+import org.mybatis.spring.SqlSessionTemplate;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Repository;
+
+import com.mycompany.biz.board.BoardVO;
+
+/*
+	@PersistenceContext
+		. EntityManager객체주입
+		
+	EntityManager의 CRUD메서드
+		. persist(Object entity)	: insert
+		. merge(Object entity)		: update
+		. remove(Object entity)		: delete
+		. find(Class<T> entityClass, Object primary key) : select one
+		. createQuery(String query, Class<T> resultClass): select list
+		
+	
+*/
+
+@Repository
+public class BoardDAOJPA {
+	
+
+	
+	@PersistenceContext
+	private EntityManager em;
+	
+	
+	//삽입
+	public void insertBoard(BoardVO vo) {
+		em.persist(vo);
+	}
+	//수정
+	public void updateBoard(BoardVO vo) {
+		em.merge(vo);
+	}
+	
+	//삭제
+	public void deleteBoard(BoardVO vo) {
+		em.remove(em.find(BoardVO.class, vo.getSeq()));
+	}
+	
+	//상세보기
+	public BoardVO getBoard(BoardVO vo) {
+		return (BoardVO)em.find(BoardVO.class, vo.getSeq()); 
+	}
+	
+	//리스트
+	public List<BoardVO> getBoardList(BoardVO vo){
+		return em.createQuery("from BoardVO b order by b.seq desc").getResultList();
+	}
+	
+}
+```
+
+- BoardVOList
+```java
+package com.mycompany.biz.board;
+
+import java.util.List;
+
+import javax.xml.bind.annotation.XmlAccessType;
+import javax.xml.bind.annotation.XmlAccessorType;
+import javax.xml.bind.annotation.XmlElement;
+import javax.xml.bind.annotation.XmlRootElement;
+
+@XmlRootElement(name = "boardList")		// XML과 JAVA객체의 변환에 열거타입활용하는 어노테이션
+@XmlAccessorType(XmlAccessType.FIELD)	// private필드만 매핑처리
+public class BoardVOList {
+	
+	@XmlElement(name = "board")
+	private List<BoardVO> boardList;
+	
+	
+	
+	public List<BoardVO> getBoardList() {
+		return boardList;
+	}
+
+	public void setBoardList(List<BoardVO> boardList) {
+		this.boardList = boardList;
+	}
+	
+	
+}
+
+```
+
+- BoardServiceImpl.java ( DI 바꾸기 )
+```java
+package com.mycompany.biz.board.impl;
+
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
+import com.mycompany.biz.board.BoardService;
+import com.mycompany.biz.board.BoardVO;
+
+@Service
+public class BoardServiceImpl implements BoardService{
+	
+
+	@Autowired
+	private BoardDAOJPA boardDAO;
+
+	public void insertBoard(BoardVO vo) {  
+		boardDAO.insertBoard(vo);
+	}
+
+	public void updateBoard(BoardVO vo) {
+		boardDAO.updateBoard(vo);
+	}
+
+	public void deleteBoard(BoardVO vo) {
+		boardDAO.deleteBoard(vo);
+	}
+
+	public BoardVO getBoard(BoardVO vo) {
+		return boardDAO.getBoard(vo);
+	}
+
+	public List<BoardVO> getBoardList(BoardVO vo) {
+		return boardDAO.getBoardList(vo);
+	}
+}
+```
