--- a/7월 1주차/7월 5일.MD
+++ b/7월 1주차/7월 5일.MD
@@ -464,3 +464,35 @@ public class BoardServiceImpl implements BoardService{
 	}
 }
 ```
+
+- BoardService interface 살리기 (원래 있긴 했음)
+```java
+package com.mycompany.biz.board;
+
+import java.util.List;
+
+public interface BoardService {
+	
+	// CRUD
+	// 삽입
+	void insertBoard(BoardVO vo);
+
+	// 수정
+	void updateBoard(BoardVO vo);
+
+	// 삭제
+	void deleteBoard(BoardVO vo);
+
+	// 상세보기
+	BoardVO getBoard(BoardVO vo);
+
+	// 리스트
+	List<BoardVO> getBoardList(BoardVO vo);
+}
+
+```
+
+- BoardController
+``` java
+
+```
