--- a/7월 1주차/7월 6일.MD
+++ b/7월 1주차/7월 6일.MD
@@ -1,7 +1,7 @@
 # Review
 
-### Mybatis
-- 개인포폴 스프링작업
+### ORM(Object Relation Mapping)프레임워크(JPA)
+
 
 
 -----------------------------------------------------
