--- a/7월 1주차/7월 6일.MD
+++ b/7월 1주차/7월 6일.MD
@@ -7,9 +7,14 @@
 -----------------------------------------------------
 
 ## 학습목표
-- AddressBook - IoC/AOP 적용 + 예외처리, 다국어처리, Mybatis 적용
+- 실습
+```
+Log4j를 활용한 Log기록처리 구현
+```
 
-- Spring 정기 평가 7/6 예정 ---> Android + Spring 추가
+- 스프링 정기평가준비 7/6(목) >> 7/7(금) 1~2교시
+
+- 개인 포트폴리오 中 CRUD로직부분 활용
 ```
  개인 포폴
   - IoC
@@ -18,3 +23,7 @@
   - 예외처리
   - 다국어 - view페이지 메뉴
   - Mybatis 적용
+>>> CRUD구현 로직 활용 상기내용 포함
+>> 평가방식 : 완성 코드 제출 및 개별 시연평가
+
+```
